igt@i915_module_load@reload-no-display - timeout - BUG: kernel NULL pointer dereference
<1> [273.766949] BUG: kernel NULL pointer dereference, address: 0000000000000080
<1> [273.766964] #PF: supervisor read access in kernel mode
<1> [273.766972] #PF: error_code(0x0000) - not-present page
<6> [273.766981] PGD 0 P4D 0
<4> [273.766989] Oops: 0000 [#1] PREEMPT SMP PTI
<4> [273.766997] CPU: 0 PID: 536 Comm: kworker/0:4 Tainted: G U 5.5.0-CI-CI_DRM_7854+ #1
<4> [273.767011] Hardware name: Intel Corp. Geminilake/GLK RVP2 LP4SD (07), BIOS GELKRVPA.X64.0062.B30.1708222146 08/22/2017
<4> [273.767034] Workqueue: events azx_probe_work [snd_hda_intel]
<4> [273.767049] RIP: 0010:__ww_mutex_lock.constprop.15+0x5e/0x1090
<4> [273.767059] Code: 75 88 be a7 03 00 00 65 48 8b 04 25 28 00 00 00 48 89 45 c8 31 c0 4c 89 c3 e8 5e b3 6d ff 44 8b 3d 2f 24 37 02 45 85 ff 75 0a <4d> 3b 6d 58 0f 85 3f 07 00 00 48 85 db 74 22 49 8b 95 80 00 00 00
<4> [273.767084] RSP: 0018:ffffc900009e3c10 EFLAGS: 00010246
<4> [273.767092] RAX: 0000000000000246 RBX: ffffc900009e3d30 RCX: 0000000000000001
<4> [273.767104] RDX: 0000000000000000 RSI: ffffffff82647c60 RDI: ffff8881561ed848
<4> [273.767114] RBP: ffffc900009e3cc0 R08: 0000000000000000 R09: 0000000000000001
<4> [273.767125] R10: ffffc900009e3ce0 R11: 0000000000000000 R12: ffffffff8168f0fc
<4> [273.767135] R13: 0000000000000028 R14: ffffc900009e3d60 R15: 0000000000000000
<4> [273.767146] FS: 0000000000000000(0000) GS:ffff88817bc00000(0000) knlGS:0000000000000000
<4> [273.767158] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [273.767167] CR2: 0000000000000080 CR3: 000000016e7e4000 CR4: 0000000000340ef0
<4> [273.767178] Call Trace:
<4> [273.767189] ? mark_held_locks+0x49/0x70
<4> [273.767200] ? ww_mutex_lock+0x39/0x70
<4> [273.767208] ww_mutex_lock+0x39/0x70
<4> [273.767218] drm_modeset_lock+0x6c/0x120
<4> [273.767299] glk_force_audio_cdclk+0x7d/0x140 [i915]
<4> [273.767380] i915_audio_component_get_power+0xf2/0x110 [i915]
<4> [273.767397] snd_hdac_display_power+0x7d/0x120 [snd_hda_core]
<4> [273.767411] azx_probe_work+0x88/0x7e0 [snd_hda_intel]
<4> [273.767426] process_one_work+0x26a/0x620
<4> [273.767437] worker_thread+0x37/0x380
<4> [273.767445] ? process_one_work+0x620/0x620
<4> [273.767453] kthread+0x119/0x130
<4> [273.767460] ? kthread_park+0x80/0x80
<4> [273.767469] ret_from_fork+0x3a/0x50
<4> [273.767479] Modules linked in: snd_hda_intel(+) i915 vgem mei_hdcp snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul ghash_clmulni_intel snd_intel_dspcfg snd_hda_codec cdc_ether snd_hwdep usbnet mii snd_hda_core snd_pcm mei_me mei r8169 realtek intel_lpss_pci prime_numbers i2c_hid pinctrl_geminilake pinctrl_intel [last unloaded: i915]
<4> [273.767544] CR2: 0000000000000080
<4> [273.767552] ---[ end trace d1a5dbd84001a46a ]---